proxy/envoy.minimal.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format:
                json_format:
                  ts:          "%START_TIME%"
                  method:      "%REQ(:METHOD)%"
                  path:        "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  status:      "%RESPONSE_CODE%"
                  duration_ms: "%DURATION%"
                  authority:   "%REQ(:AUTHORITY)%"
                  user_agent:  "%REQ(USER-AGENT)%"
                  request_id:  "%REQ(X-REQUEST-ID)%"
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "cad_plugin"
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/var/local/lib/wasm/cloud-active-defense.wasm"
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "ENVOY_API_KEY": "changeme"
                    }
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
  clusters:
  - name: web_service
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: myapp
                port_value: 3000
  - name: controlpanel-api
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: controlpanel-api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: controlpanel-stub
                port_value: 8050
