proxy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          use_remote_address: true
          xff_num_trusted_hops: 0
          skip_xff_append: false
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "cookie_plugin"
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "var/local/lib/wasm/cloud-active-defense.wasm"
                configuration: 
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "ENVOY_API_KEY": "<ENVOY_API_KEY>"
                    }
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
            - name: clone_service
              domains:
              - "clone"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: clone
            - name: exhaust_service
              domains:
              - "exhaust"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: exhaust
  clusters:
  - name: web_service
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: myapp
                port_value: 80
  - name: controlpanel-api
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: controlpanel-api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: controlpanel-api
                port_value: 8050

  - name: clone
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: clone
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: clone
                port_value: 2000
  - name: exhaust
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: exhaust
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: exhaust
                port_value: 4000
